Closed Bug 382270 Opened 18 years ago Closed 18 years ago

The displayed menu item in a collapsed HTML combo box should have SHOWING state exposed via AT-SPI

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jdiggs, Assigned: aaronlev)

References

(Blocks 2 open bugs)

Details

(Keywords: access)

Attachments

(1 file)

Currently, the displayed menu item in a collapsed HTML combo box does not have SHOWING among its states. While it can be distinguished by the states of FOCUSED and SELECTED, including the SHOWING state would mean that the visible text could be identified in the same fashion as one can do with lists rather than having to be handled as a "special case." Steps to reproduce: 1. Navigate to https://bugzilla.mozilla.org/enter_bug.cgi?product=Core 2. Use Accerciser to examine the severity combo box. None of these items have the "showing" state, including the one that is showing. Notes: In bug 366340 (https://bugzilla.mozilla.org/show_bug.cgi?id=366340#c14), Nian said: > if select is collapsed, remove SHOWING state Had I seen that at the time, I would have protested. :-) If that was indeed included in the HTML combo box a11y cleanup (https://bugzilla.mozilla.org/show_bug.cgi?id=379678), any chance we could have SHOWING back? Thanks!!
Blocks: htmla11y
Comment on attachment 266473 [details] [diff] [review] Inherit invisible/offscreen from combobox. If combo is neither, then ensure showing option is marked SHOWING r=me xul combo box has the same problem. would you mind to fix it as well?
Attachment #266473 - Flags: review?(Evan.Yan) → review+
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Bug 383567 filed for xul combo box case
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: